--- a/index.html
+++ b/index.html
@@ -20,8 +20,17 @@
 				<a href="#">Projects</a>
 				<a href="#">Contact</a>
 			</nav>
+			<button class="hamburger">
+				<div class="bar"></div>
+			</button>
 		</div>
 	</header>
+	<nav class="mobile-nav">
+		<a href="#">Home</a>
+		<a href="#">Services</a>
+		<a href="#">Projects</a>
+		<a href="#">Contact</a>
+	</nav>
 	<main>
 		<section class="banner">
 			<div class="container">
