--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 					<div class="service">
 						<figure class="img-box">
-							<img src="./assets/images/service-1.jpg" alt="Website Service" class="img" />
+							<img src="./assets/image/service-1.jpg" alt="Website Service" class="img" />
 						</figure>
 						<div class="content">
 							<h3>Websites</h3>
@@ -66,7 +66,7 @@
 
 					<div class="service">
 						<figure class="img-box">
-							<img src="./assets/images/service-2.jpg" alt="App Service" class="img" />
+							<img src="./assets/image/service-2.jpg" alt="App Service" class="img" />
 						</figure>
 						<div class="content">
 							<h3>Apps</h3>
@@ -79,7 +79,7 @@
 					
 					<div class="service">
 						<figure class="img-box">
-							<img src="./assets/images/service-3.jpg" alt="Games Service" class="img" />
+							<img src="./assets/image/service-3.jpg" alt="Games Service" class="img" />
 						</figure>
 						<div class="content">
 							<h3>Games</h3>
@@ -92,7 +92,7 @@
 
 					<div class="service">
 						<figure class="img-box">
-							<img src="./assets/images/service-4.jpg" alt="Mentoring Service" class="img" />
+							<img src="./assets/image/service-4.jpg" alt="Mentoring Service" class="img" />
 						</figure>
 						<div class="content">
 							<h3>Mentoring</h3>
